@@ -1,0 +1,11 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST ovirt-engine-3.3.1.tar.gz 6165699 SHA256 44017c309cad3c9e7a0c609c1d7631a2d984215e49dd7313f33204eb9790caa3 SHA512 ba724060fefdee3410c05c1166402e1bf23c45608ab54d017bce65c35d68d98c6f1d01521c3e3e36a1ff8b4ecdf42b286c8460b6777a3a32e6bdf87e5d8d20fe WHIRLPOOL aad4937c83f28bdc86d73d87fb3d7bdbee9d1eb5c4545764417564233ee31689da0c07af05dd6393282b330ddb97399bfbbb9c8c68a9972e412c2f484df39e0a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlKUokAACgkQXYk9GL8g3FHjIwD9HcvQxRYLXa+1M8OejX38bFQQ
+IMn/ITVir6EFiPGzbecA/1RG7owhxe2Y5JkoiMEZh26xmmvCwv1Jp+mBrxV5mgDg
+=p+GK
+-----END PGP SIGNATURE-----
