@@ -12,4 +12,5 @@ start_stop_daemon_args="--user ovirt:ovirt"
 depend() {
 	use logger
 	need net
+	need postgresql
 }
